tests/baselines/reference/pathMappingBasedModuleResolution_rootImport_aliasWithRoot_differentRootTypes.errors.txt
/root/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /root/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "/*": ["./src/*"],
                "c:/*": ["./src/*"],
                "c:\\*": ["./src/*"],
                "//server/*": ["./src/*"],
                "\\\\server\\*": ["./src/*"],
                "file:///*": ["./src/*"],
                "file://c:/*": ["./src/*"],
                "file://server/*": ["./src/*"],
                "http://server/*": ["./src/*"]
            },
            "allowJs": true,
            "outDir": "bin"
        }
    }
    
==== /root/src/foo.ts (0 errors) ====
    export function foo() {}
    
==== /root/src/bar.js (0 errors) ====
    export function bar() {}
    
==== /root/a.ts (0 errors) ====
    import { foo as foo1 } from "/foo";
    import { bar as bar1 } from "/bar";
    import { foo as foo2 } from "c:/foo";
    import { bar as bar2 } from "c:/bar";
    import { foo as foo3 } from "c:\\foo";
    import { bar as bar3 } from "c:\\bar";
    import { foo as foo4 } from "//server/foo";
    import { bar as bar4 } from "//server/bar";
    import { foo as foo5 } from "\\\\server\\foo";
    import { bar as bar5 } from "\\\\server\\bar";
    import { foo as foo6 } from "file:///foo";
    import { bar as bar6 } from "file:///bar";
    import { foo as foo7 } from "file://c:/foo";
    import { bar as bar7 } from "file://c:/bar";
    import { foo as foo8 } from "file://server/foo";
    import { bar as bar8 } from "file://server/bar";
    import { foo as foo9 } from "http://server/foo";
    import { bar as bar9 } from "http://server/bar";
    